--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Impact Bootstrap Template - Index</title>
+  <title>Suicides In India Visualization</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.jpeg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,14 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Impact
-  * Updated: May 30 2023 with Bootstrap v5.3.0
-  * Template URL: https://bootstrapmade.com/impact-bootstrap-business-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
+
 
 <body>
 
@@ -55,7 +48,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+           <img src="assets/img/apple-touch-icon.jpeg" alt=""> 
         <h1>Suicides in India<span>.</span></h1>
       </a>
       <nav id="navbar" class="navbar">
@@ -95,7 +88,7 @@
           <p>A Portfolio of India's Suicide Rates from 2001 to 2012.</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#introduction" class="btn-get-started">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://drive.google.com/drive/folders/1S9gcdJGkPWMJINRJBw5IL24ZFFyXDWat?usp=sharing" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
@@ -139,7 +132,6 @@
 
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpeg" class="img-fluid rounded-4" alt="">
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
@@ -187,7 +179,7 @@
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="call-to-action">
       <div class="container text-center" data-aos="zoom-out">
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+        <a href="https://drive.google.com/drive/folders/1S9gcdJGkPWMJINRJBw5IL24ZFFyXDWat?usp=sharing" class="glightbox play-btn"></a>
         <h3>Call To Action</h3>
         <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <a class="cta-btn" href="#">Call To Action</a>
@@ -529,7 +521,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span>Suicides in India</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Suicide is a difficult topic to discuss, but it's an issue that affects many people in India. In fact, according to data from 2001 to 2012, suicide rates in India have been steadily increasing. It's important that we talk about this issue and work together to prevent it.</p>
           
         </div>
 
